Added a new rule in eslintrc to prevent warning for Windows users

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "react-hooks"
     ],
     "rules": {
+        "linebreak-style": 0,
         "react/no-array-index-key": "off",
         "react/jsx-props-no-spreading": "off",
         "no-use-before-define": "off",
