--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=https://api.openweathermap.org/data/2.5/weather
 REACT_APP_API_KEY=e8494041c18f4fb49711952d18ed353f
-REACT_APP_CACHE_LIFETIME_IN_SECONDS=60
-REACT_APP_CACHE_THRESHOLD_TIME=1
+REACT_APP_SERVICE_EXECUTION_INTERVAL_IN_SECONDS=60
+REACT_APP_CACHE_LIFETIME_IN_SECONDS=30
+REACT_APP_CITIES="Oslo,São Paulo,abcdefg"
