Fixed Chokidar dep.
Adjusted REACT_APP_CITIES env variable

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_API_URL=https://api.openweathermap.org/data/2.5/weather
 REACT_APP_API_KEY=e8494041c18f4fb49711952d18ed353f
 REACT_APP_SERVICE_EXECUTION_INTERVAL_IN_SECONDS=60
 REACT_APP_CACHE_LIFETIME_IN_SECONDS=30
-REACT_APP_CITIES="Oslo,São Paulo,abcdefg"
+REACT_APP_CITIES="Oslo,São Paulo"
